@@ -1,3 +1,8 @@
+2011-08-29  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50224
+	* semantics.c (finish_id_expression): Mark captured variables used.
+
 2011-08-25  Jason Merrill  <jason@redhat.com>
 
 	PR c++/50157
